# alibi-detect

./: .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  oss_commits.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  publish_test.yml  security.yaml  test_all_notebooks.yml  test_changed_notebooks.yml
alibi_detect/: __init__.py  _version.py  base.py  datasets.py  exceptions.py  version.py
alibi_detect/ad/: __init__.py  adversarialae.py  adversarialvae.py  model_distillation.py
alibi_detect/cd/: __init__.py  _domain_clf.py  base.py  base_online.py  chisquare.py  classifier.py  classifier_pt.py  classifier_tf.py  context_aware.py  cvm.py  cvm_online.py  domain_clf.py  fet.py  fet_online.py  ks.py  kschi.py  learned_kernel.py  learnt_kernel.py  lsdd.py  lsdd_online.py  margindensity.py  metrics.py  mmd.py  mmd_online.py  mmd_tf.py  model_distillation.py  model_uncertainty.py  nme.py  preprocess.py  spectral.py  spot_the_diff.py  tabular.py  utils.py
alibi_detect/factory/: __init__.py  builder.py  detectors.py  models.py  preprocess.py  preprocessors.py  utils.py
alibi_detect/metrics/: README.md  data.py  utils.py
alibi_detect/models/: __init__.py  autoencoder.py  embedding.py  gmm.py  losses.py  pixelcnn.py  resnet.py  trainer.py
alibi_detect/od/: __init__.py  _gmm.py  _knn.py  _lof.py  _mahalanobis.py  _pca.py  _svm.py  ae.py  aegmm.py  aggregation.py  base.py  config.py  deepsvdd.py  ensemble.py  isolationforest.py  knn.py  llr.py  loading.py  mahalanobis.py  prophet.py  saving.py  seq2seq.py  sr.py  transforms.py  vae.py  vaegmm.py
alibi_detect/saving/: __init__.py  _typing.py  loading.py  registry.py  saving.py  schemas.py  typing.py  validate.py  validators.py
alibi_detect/tests/: conftest.py  test_datasets.py  test_dep_management.py
alibi_detect/utils/: __init__.py  _random.py  _state.py  _types.py  config.py  configs.py  custom.py  data.py  discretizer.py  distance.py  fetching.py  frameworks.py  kernels.py  loading.py  mapping.py  metrics.py  misc.py  missing_optional_dependency.py  perturbation.py  prediction.py  random.py  registry.py  sampling.py  saving.py  schemas.py  statstest.py  url.py  validate.py  visualize.py  warnings.py
doc/: README.md  SUMMARY.md
doc/ad/: examples.md  methods.md
doc/cd/: README.md
doc/examples/: ad_ae_cifar10.md  cd_chi2ks_adult.ipynb  cd_clf_adult.ipynb  cd_context_ecg.ipynb  cd_spot_the_diff_mnist_wine.md  cd_supervised_penguins.md  cd_text_imdb.ipynb  od_ae_cifar10.ipynb  od_aegmm_kddcup.ipynb  od_if_kddcup.ipynb  od_mahalanobis_kddcup.md  od_vae_adult.ipynb  od_vae_cifar10.ipynb
doc/models/: overview.md
doc/od/: README.md
doc/overview/: config_files.md  getting_started.md
doc/source/: bib.md  conf.py  index.md  index.rst  landing.md  refs.bib
docs-gb/: README.md  SUMMARY-API.md  SUMMARY.md  algorithms.md  alibi_detect_deploy.md  bibliography.md  config_files.md  generate_api_docs.py  getting_started.md  overview.md  refs.bib  saving.md
docs-gb/adversarial-detection/: README.md
docs-gb/api/: alibi_detect.md
docs-gb/cd/: README.md
docs-gb/datasets/: overview.md
docs-gb/examples/: ad_ae_cifar10.ipynb  alibi_detect_deploy.ipynb  alibi_detect_deploy.md  cd_chi2ks_adult.ipynb  cd_clf_adult.md  cd_clf_cifar10.ipynb  cd_clf_cifar10.md  cd_context_20newsgroup.ipynb  cd_context_20newsgroup.md  cd_context_ecg.md  cd_distillation_cifar10.md  cd_ks_cifar10.ipynb  cd_ks_cifar10.md  cd_mmd_cifar10.ipynb  cd_mmd_cifar10.md  cd_mmd_keops.ipynb  cd_model_unc_cifar10_wine.ipynb  cd_model_unc_cifar10_wine.md  cd_mol.ipynb  cd_mol.md  cd_online_camelyon.ipynb  cd_online_camelyon.md  cd_online_wine.ipynb  cd_online_wine.md  cd_spot_the_diff_mnist_wine.ipynb  cd_supervised_penguins.ipynb  cd_text_amazon.ipynb  cd_text_amazon.md  cd_text_imdb.ipynb  cd_text_imdb.md  od_ae_cifar10.ipynb  od_ae_cifar10.md  od_llr_genome.ipynb  od_llr_genome.md  od_llr_mnist.ipynb  od_llr_mnist.md  od_prophet_weather.md  od_seq2seq_ecg.ipynb  od_sr_synth.ipynb  od_vae_adult.ipynb  (+6 more)
docs-gb/outlier-detection/: README.md
docs-gb/overview/: algorithms.md  config_files.md  getting_started.md  (+2 more)
example_specs/: cd_factory.ipynb  cd_factory.py  cd_mmd_cifar10.ipynb  mmd_cifar10_resnet.yaml  mmd_image.yaml  mmd_random_encoder.yaml  mmd_random_encoder_pytorch.yaml  mmd_resnet.yaml  mmd_resnet_local.yaml  test.py  test.yaml  test_config.ipynb
examples/: AdversarialExpsCifar.ipynb  AdversarialExpsMnist.ipynb  DataTracker.ipynb  Mahalanobis.ipynb  Mahalanobis_outlier.ipynb  README.md  Streams.ipynb  ad_advvae_mnist.ipynb  ad_advvae_signs.ipynb  ad_ae_cifar10.ipynb  alibi_detect_deploy.ipynb  cd_chi2ks_adult.ipynb  cd_clf_adult.ipynb  cd_clf_cifar10.ipynb  cd_combined_kernel.ipynb  cd_context_20newsgroup.ipynb  cd_context_ecg.ipynb  cd_distillation_cifar10.ipynb  cd_harmfulness_detection_cifar10.ipynb  cd_ks_cifar10.ipynb  cd_md3_wine.ipynb  cd_md3_winequality.ipynb  cd_mmd_cifar10.ipynb  cd_mmd_keops.ipynb  cd_mmd_online_wine_quality.ipynb  cd_model_unc_cifar10.ipynb  cd_model_unc_cifar10_wine.ipynb  cd_mol.ipynb  cd_online_camelyon.ipynb  cd_online_supervised.ipynb  cd_online_wine.ipynb  cd_spot_the_diff.ipynb  cd_spot_the_diff_mnist_wine.ipynb  cd_supervised.ipynb  cd_supervised_penguins.ipynb  cd_text_amazon.ipynb  cd_text_imdb.ipynb  concept_drift_cifar10.ipynb  concept_drift_mnist.ipynb  concept_drift_musk.ipynb  (+23 more)
integrations/: README.md
licenses/: license.txt  license_info.csv  license_info.no_versions.csv
non_para_drift_tests/: cvm_benchmarking.ipynb  cvm_benchmarking.py  cvm_benchmarks_N200.npz  cvm_benchmarks_N400.npz  cvm_test.py  fet_test.py  mmd_test.py  plot_cvm_benchmarking.py
odcd/: __init__.py  datasets.py  version.py
requirements/: dev.txt  docs.txt  examples.txt  requirements.txt  requirements_all.txt  requirements_ci.txt  requirements_examples.txt
scripts/: gen_configs.py
testing/: requirements.txt  test_notebooks.py
(+753 files in other folders)
