# setuptools settings (we could change to poetry or flit in the future)
[build-system]
requires = [
	"setuptools>=61.0.0, <63.0.0",
	"wheel>=0.36.0, <0.38.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["alibi_detect*"]
exclude = ["**/tests*"]  # tests should be excluded by default (https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout) but exclude explicitly in case of change
namespaces = false

# Project metadata
[project]
name = "alibi-detect"
description = "Algorithms for outlier, adversarial and drift detection."
authors = [
	{name = "Seldon Technologies Ltd."}, 
	{email = "hello@seldon.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
version = "0.9.2dev"
requires-python = ">=3.7, <3.11" 

classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "matplotlib>=3.0.0, <4.0.0",
    "numpy>=1.16.2, <2.0.0",
    "pandas>=0.23.3, <2.0.0",
    "Pillow>=5.4.1, <10.0.0",
    "opencv-python>=3.2.0, <5.0.0",
    "scipy>=1.3.0, <2.0.0",
    'scikit-image>=0.14.2, !=0.17.1, <0.20',  # https://github.com/SeldonIO/alibi/issues/215
    "scikit-learn>=0.20.2, <1.1.0",
    "tensorflow>=2.2.0, !=2.6.0, !=2.6.1, <2.9.0",  # https://github.com/SeldonIO/alibi-detect/issues/375 and 387
    "tensorflow_probability>=0.8.0, <0.17.0",
    "transformers>=4.0.0, <5.0.0",
    "dill>=0.3.0, <0.4.0",
    "tqdm>=4.28.1, <5.0.0",
    "requests>=2.21.0, <3.0.0",
    "numba>=0.50.0, !=0.54.0, <0.56.0"  # Avoid 0.54 due to: https://github.com/SeldonIO/alibi/issues/466
]

[project.urls]
repository = "https://github.com/SeldonIO/alibi-detect"
documentation = "https://docs.seldon.io/projects/alibi-detect/en/stable/"

[project.optional-dependencies]
prophet = ["fbprophet>=0.5, <0.7", "holidays==0.9.11", "pystan<3.0"]
torch = ["torch>=1.7.0"]


# pytest
[tool.pytest.ini_options]
addopts = "--tb native -W ignore --cov=alibi_detect"


# mypy
[tool.mypy]
ignore_missing_imports = true
strict_optional = false
show_error_codes = true


# tox test environment for generating licenses (below syntax subject to change - https://tox.wiki/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini)
[tool.tox]
legacy_tox_ini = """
[tox:tox]

[testenv:licenses]
basepython = python
deps =
  pip-licenses
  typing_extensions # not present with py38
  idna-ssl # not present with py36
  dataclasses # not present with py36
  importlib-metadata # not present with py38
  zipp # not present with py38
  fsspec # not present with py36
  locket # not present with py36
  partd # not present with py36
extras = all
commands =
  pip-licenses \
    --from=mixed \
    --format=csv \
    --output-file=./licenses/license_info.csv
  pip-licenses \
    --from=mixed \
    --format=plain-vertical \
    --with-license-file \
    --no-license-path \
    --output-file=./licenses/license.txt
"""
