# Entry point for use with pytest-randomly (pytest uses the alibi_detect set_seed to set RNG seeds during testing)
[options.entry_points]
pytest_randomly.random_seeder =
    reseed = alibi_detect.utils._random:set_seed

[aliases]
test=pytest

[tool:pytest]
addopts =
    --tb native
    -W ignore
    --cov=alibi_detect
    #-n auto
    #--forked

[flake8]
max-line-length = 120
exclude =
    # sphinx configuration
    doc/source/conf.py
    # post-test
    .eggs/

[mypy]
ignore_missing_imports = True
strict_optional = False
show_error_codes = True

# sphinx configuration
[mypy-conf]
ignore_errors = True

# tox test environments for generating licenses and testing optional dependencies
[tox:tox]
envlist=
    default
    tensorflow
    torch
    prophet
    keops
    all

# tox test environment for generating licenses
[testenv:licenses]
basepython = python
deps =
  pip-licenses
  typing_extensions # not present with py38
  idna-ssl # not present with py36
  dataclasses # not present with py36
  importlib-metadata # not present with py38
  zipp # not present with py38
  fsspec # not present with py36
  locket # not present with py36
  partd # not present with py36
commands =
  pip-licenses \
    --from=mixed \
    --format=csv \
    --output-file=./licenses/license_info.csv
  pip-licenses \
    --from=mixed \
    --format=plain-vertical \
    --with-license-file \
    --no-license-path \
    --output-file=./licenses/license.txt

# environment for testing imports without any optional dependencies installed
[testenv:default]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
passenv = COMMAND
commands = {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=default}

# tox test environment for testing tensorflow optional dependency imports
[testenv:tensorflow]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    tensorflow
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=tensorflow}

# tox test environment for testing torch optional dependency imports
[testenv:torch]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    torch
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=torch}

# tox test environment for testing prophet optional dependency imports
[testenv:prophet]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    prophet
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=prophet}

# tox test environment for testing keops optional dependency imports
[testenv:keops]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    keops
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=keops}

# environment for testing imports with all optional dependencies installed
[testenv:all]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    all
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=all}
