# Entry point for use with pytest-randomly (pytest uses the alibi_detect set_seed to set RNG seeds during testing)
[options.entry_points]
pytest_randomly.random_seeder =
    reseed = alibi_detect.utils._random:set_seed

[aliases]
test=pytest

[tool:pytest]
addopts =
    --tb native
    -W ignore
    --cov=alibi_detect
    --durations=50
    --durations-min=1.0
    #-n auto
    #--forked

[flake8]
max-line-length = 120
exclude =
    # sphinx configuration
    doc/source/conf.py
    # post-test
    .eggs/
docstring-convention=all
ignore=
    # The following are disabled by default in flake8. Manually disabled here in order to enable E226.
    E121,E123,E126,E24,E704,W503,W504,
    # Flake8-docstrings consider the following exceptions to the numpy convection. Manually disabled here 
    # in order to enable D107 and D417.
    D203,D212,D213,D402,D413,D415,D416, 
    # The following are temporarily disabled. Will be re-enabled in a future PR.
    D1,D401,D205,D400,
    # ignore D403 due to: https://github.com/PyCQA/pydocstyle/issues/167 
    D403,
    # ignore D208 due to conflicts with returns statement formatting.
    D208
enable=D417

[mypy]
ignore_missing_imports = True
strict_optional = False
show_error_codes = True

# sphinx configuration
[mypy-conf]
ignore_errors = True

# tox test environments for generating licenses and testing optional dependencies
[tox:tox]
envlist=
    default
    tensorflow
    torch
    prophet
    keops
    all

# tox test environment for generating licenses
[testenv:licenses]
basepython = python
deps =
  pip-licenses
commands =
  pip-licenses \
    --from=mixed \
    --format=csv \
    --output-file=./licenses/license_info.csv
  pip-licenses \
    --from=mixed \
    --format=plain-vertical \
    --with-license-file \
    --no-license-path \
    --output-file=./licenses/license.txt

# environment for testing imports without any optional dependencies installed
[testenv:default]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
passenv = COMMAND
commands = {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=default}

# tox test environment for testing tensorflow optional dependency imports
[testenv:tensorflow]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    tensorflow
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=tensorflow}

# tox test environment for testing torch optional dependency imports
[testenv:torch]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    torch
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=torch}

# tox test environment for testing prophet optional dependency imports
[testenv:prophet]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    prophet
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=prophet}

# tox test environment for testing keops optional dependency imports
[testenv:keops]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    keops
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=keops}

# environment for testing imports with all optional dependencies installed
[testenv:all]
basepython = python
deps = pytest
    pytest-cov
    pytest-randomly
extras=
    all
commands =
    {env:COMMAND:pytest --no-cov alibi_detect/tests/test_dep_management.py --opt-dep=all}
